Ensure we will have a scrollbar if the sidebar is too short.

--- a/data/view/topics/topics.css
+++ b/data/view/topics/topics.css
@@ -7,7 +7,7 @@ html {
 
   color:        #eee;
 
-  overflow:     hidden;
+  overflow:     hidden auto;
 }
 body {
   padding:  0.25em;
